# intonation-analysis

./: .gitignore  README.md  pyproject.toml
analyze_recording/: app.py  audio_json.json  main.py
analyze_recording/templates/: index.html
intonation_app/: analyze_audio.py  annotate_music.py  audio_json_to_csv.py  dtw_functions.py  dynamic_time_warp.py  fastdtw_modified.py  import_and_analyze_sheet_music.py  main.py  mapping_r_and_d.py
intonation_app/exports/: audio_csv.csv  audio_json.json  one_to_one_mapping_to_sheet_music.csv  original_intonation_errors.csv  sheet_music_csv.csv
r_and_d/: frequencies_r_and_d.py  functions.py  music21_test.py
real_time_tuner/: app.py  frequencies.json  main.py  requirements.txt
real_time_tuner/templates/: index.html
